# VoiceKey

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  architecture.md  install.sh  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  software_requirements.md  test_asr_repro.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_report.md
.github/workflows/: ci.yml  release.yml
backlog/: BACKLOG_MASTER.md  COMMON_PATTERN.md  EXECUTION_RULES.md  README.md  TRACEABILITY_MATRIX.md  WORK_LOG.md
docs/: compatibility-matrix.md  features.md  getting-started.md  incident-response.md  index.md  requirements.txt
docs/architecture/: audio-pipeline.md  design-decisions.md  overview.md  state-machine.md
docs/development/: contributing.md  index.md  setup.md  testing.md
docs/guide/: basic-usage.md  commands.md  configuration.md  index.md  listening-modes.md
docs/installation/: index.md  linux.md  source.md  windows.md
docs/reference/: audio.md  commands.md  config.md  index.md  platform.md
docs/resources/: faq.md  index.md  roadmap.md  troubleshooting.md
requirements/: README.md  analysis.md  commands.md  configuration.md  development.md  devops-cicd.md  distribution.md  implementation-plan.md  installation.md  onboarding.md  open-source-governance.md  recommendations.md  release-checklist.md  risk-assessment.md  security.md  testing-strategy.md  troubleshooting.md
scripts/ci/: check_branch_protection.py  check_matrix_coverage.py  check_perf_guardrails.py  export_ci_metrics.py  generate_matrix_report.py
scripts/docs/: validate_developer_docs.py  validate_user_docs.py
scripts/linux/: build_appimage.py  (+1 more)
tests/: __init__.py  conftest.py
voicekey/: __init__.py
(+164 files in other folders)
