[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voicekey"
version = "0.1.0"
description = "Privacy-first offline voice-to-keyboard for Linux and Windows"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "VoiceKey Team", email = "team@voicekey.app" }
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "Security :: Privacy",
]

dependencies = [
    "faster-whisper>=0.10.0",
    "sounddevice>=0.4.6",
    "silero-vad>=1.0.0",
    "pynput>=1.7.6",
    "click>=8.1.7",
    "rich>=13.7.0",
    "pystray>=0.19.5",
    "pydantic>=2.5.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
linux = [
    "evdev>=1.7.0",
]
windows = [
    "pywin32>=306",
]
all-platforms = [
    "voicekey[linux]",
    "voicekey[windows]",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
voicekey = "voicekey.ui.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["voicekey*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
